tests/src/frontend/typechecking/invalid/deferred_override_1.sk
base class Foo {
  fun no(): void;
}

base class Bar extends Foo {
  deferred fun no(): void;
}
